--- a/Caopanhia/app/src/main/res/values/strings.xml
+++ b/Caopanhia/app/src/main/res/values/strings.xml
@@ -8,4 +8,21 @@
     <string name="ndClose">Close</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txt_caopanhia">CÃOPANHIA</string>
+    <string name="txt_bem_vindo">Bem-vindo</string>
+    <string name="txt_username">Username</string>
+    <string name="txt_futuras_consultas">Futuras consultas:</string>
+    <string name="txt_sair">Sair</string>
+    <string name="txt_consultas_pessoais">Minhas consultas:</string>
+    <string name="txt_encomendas_pessoais">Minhas encomendas:</string>
+    <string name="txt_caes_pessoais">Meus cães:</string>
+    <string name="txt_menu_pagina_inicial">Página Inicial</string>
+    <string name="txt_opcoes">Opções</string>
+    <string name="txt_menu_caes">Meus cães</string>
+    <string name="txt_menu_consultas">Minhas consultas</string>
+    <string name="txt_menu_encomendas">Minhas encomendas</string>
+    <string name="txt_mapas">Mapas</string>
+    <string name="txt_menu_servicos">Serviços</string>
+    <string name="txt_sessao">Sessão</string>
+    <string name="txt_dr">Dr.</string>
 </resources>
